Replace compilerVersion with new MIN_GHC_API_VERSION macro

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -81,7 +81,9 @@
     - Development.IDE.GHC.Compat
     - Development.IDE.GHC.Util
     - Development.IDE.Import.FindImports
+    - Development.IDE.LSP.CodeAction
     - Development.IDE.Spans.Calculate
+    - Main
 
 - flags:
   - default: false
