--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
         displayName: 'Install Stack'
       - bash: stack setup
         displayName: 'stack setup'
-      - bash: stack build --only-dependencies
+      - bash: stack build --only-dependencies --ghc-options=-Werror
         displayName: 'stack build --only-dependencies'
       - bash: stack test || stack test || stack test
         # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
@@ -83,7 +83,7 @@ jobs:
         displayName: 'Install Stack'
       - bash: stack setup --stack-yaml=stack84.yaml
         displayName: 'stack setup --stack-yaml=stack84.yaml'
-      - bash: stack build --only-dependencies --stack-yaml=stack84.yaml
+      - bash: stack build --only-dependencies --stack-yaml=stack84.yaml --ghc-options=-Werror
         displayName: 'stack build --only-dependencies --stack-yaml=stack84.yaml'
       - bash: stack test --stack-yaml=stack84.yaml || stack test --stack-yaml=stack84.yaml || stack test --stack-yaml=stack84.yaml
         # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
@@ -127,7 +127,7 @@ jobs:
         displayName: 'Install Stack'
       - bash: stack setup --stack-yaml=stack-ghc-lib.yaml
         displayName: 'stack setup --stack-yaml=stack-ghc-lib.yaml'
-      - bash: stack build --only-dependencies --stack-yaml=stack-ghc-lib.yaml
+      - bash: stack build --only-dependencies --stack-yaml=stack-ghc-lib.yaml --ghc-options=-Werror
         displayName: 'stack build --only-dependencies --stack-yaml=stack-ghc-lib.yaml'
       - bash: stack test --stack-yaml=stack-ghc-lib.yaml || stack test --stack-yaml=stack-ghc-lib.yaml || stack test --stack-yaml=stack-ghc-lib.yaml
         # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
