--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -128,13 +128,14 @@ library
         Development.IDE.Spans.Calculate
         Development.IDE.Spans.Documentation
         Development.IDE.Spans.Type
+    ghc-options: -Wall -Wno-name-shadowing
 
 executable ghcide
     if flag(ghc-lib)
       buildable: False
     default-language:   Haskell2010
     hs-source-dirs:     exe
-    ghc-options: -threaded
+    ghc-options: -threaded -Wall -Wno-name-shadowing
     main-is: Main.hs
     build-depends:
         base == 4.*,
@@ -188,7 +189,7 @@ test-suite ghcide-tests
         text
     hs-source-dirs: test/cabal test/exe test/src
     include-dirs: include
-    ghc-options: -threaded
+    ghc-options: -threaded -Wall -Wno-name-shadowing
     main-is: Main.hs
     other-modules:
         Development.IDE.Test
