Fix hie.yaml so it works

--- a/hie.yaml
+++ b/hie.yaml
@@ -24,6 +24,7 @@ cradle:
       - -ignore-package=ghc-lib
       - -DGHC_STABLE
       - -Iinclude
+      - -idist/build/autogen
       - -isrc
       - -iexe
       - -itest/cabal
