Use a stack cradle in hie.yaml

--- a/hie.yaml
+++ b/hie.yaml
@@ -1,32 +1,1 @@
-cradle:
-  direct:
-    arguments:
-      - -Wunused-binds
-      - -Wunused-imports
-      - -Worphans
-      - -Wunused-matches
-      - -Wincomplete-patterns
-      - -XBangPatterns
-      - -XDeriveGeneric
-      - -XGeneralizedNewtypeDeriving
-      - -XOverloadedStrings
-      - -XDeriveFunctor
-      - -XLambdaCase
-      - -XNamedFieldPuns
-      - -XRecordWildCards
-      - -XScopedTypeVariables
-      - -XStandaloneDeriving
-      - -XTupleSections
-      - -XTypeApplications
-      - -XViewPatterns
-      - -package=ghc
-      - -ignore-package=ghc-lib-parser
-      - -ignore-package=ghc-lib
-      - -DGHC_STABLE
-      - -Iinclude
-      - -idist/build/autogen
-      - -isrc
-      - -iexe
-      - -itest/cabal
-      - -itest/src
-      - -itest/exe
+cradle: {stack}
