Hack around https://github.com/mpickering/hie-bios/pull/56 - hie-bios expects files to really exist on disk

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -171,6 +171,7 @@ test-suite ghcide-tests
     build-depends:
         base,
         containers,
+        directory,
         extra,
         filepath,
         --------------------------------------------------------------
