Put back mtl dependency

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -42,6 +42,7 @@ library
         hashable,
         haskell-lsp-types,
         haskell-lsp >= 0.15,
+        mtl,
         network-uri,
         prettyprinter-ansi-terminal,
         prettyprinter-ansi-terminal,
