--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -187,6 +187,7 @@ test-suite ghcide-tests
         parser-combinators,
         tasty,
         tasty-hunit,
+        tasty-expected-failure,
         text
     hs-source-dirs: test/cabal test/exe test/src
     include-dirs: include
