--- a/stack88.yaml
+++ b/stack88.yaml
@@ -3,14 +3,15 @@ packages:
 - .
 extra-deps:
 - github: alanz/haskell-lsp
-  commit: 37a94601b9ebcec6dc05a968a97435ad8007757f
+  commit: 226b572bdc5cea93602deab25ba657fd09b61875
   subdirs:
     - .
     - haskell-lsp-types
+- github: cocreature/lsp-test
+  commit: a68b0187aef3347b7ad07496c1f3ba36a40f69bd
 - prettyprinter-1.3.0
 - prettyprinter-ansi-terminal-1.1.1.2
 - hslogger-1.3.0.0
-- lsp-test-0.7.0.0
 - network-bsd-2.8.1.0
 allow-newer: true
 nix:
