Switch to new releases of haskell-lsp and lsp-test

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -40,8 +40,8 @@ library
         extra,
         filepath,
         hashable,
-        haskell-lsp-types,
-        haskell-lsp >= 0.15,
+        haskell-lsp-types >= 0.17,
+        haskell-lsp >= 0.17,
         mtl,
         network-uri,
         prettyprinter-ansi-terminal,
@@ -186,7 +186,7 @@ test-suite ghcide-tests
         --------------------------------------------------------------
         haskell-lsp-types,
         lens,
-        lsp-test,
+        lsp-test >= 0.8,
         parser-combinators,
         tasty,
         tasty-hunit,
