--- a/stack.yaml
+++ b/stack.yaml
@@ -2,13 +2,9 @@ resolver: nightly-2019-09-16
 packages:
 - .
 extra-deps:
-- github: alanz/haskell-lsp
-  commit: fefcae8b44aaf7658e0f90d5530832efe0b32053
-  subdirs:
-    - .
-    - haskell-lsp-types
-- github: cocreature/lsp-test
-  commit: 40da0529edb687864acf2716dff310d38b0641c6
+- haskell-lsp-0.17.0.0
+- haskell-lsp-types-0.17.0.0
+- lsp-test-0.8.0.0
 - hie-bios-0.2.1
 nix:
   packages: [zlib]
