--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -187,6 +187,7 @@ test-suite ghcide-tests
         ghc,
         --------------------------------------------------------------
         ghcide,
+        ghc-typelits-knownnat,
         haskell-lsp-types,
         lens,
         lsp-test >= 0.8,
