Initial implementation of completion support

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -39,6 +39,7 @@ library
         deepseq,
         directory,
         extra,
+        fuzzy,
         filepath,
         hashable,
         haskell-lsp-types >= 0.18,
@@ -96,6 +97,7 @@ library
     include-dirs:
         include
     exposed-modules:
+        Development.IDE.Core.Completions
         Development.IDE.Core.FileStore
         Development.IDE.Core.OfInterest
         Development.IDE.Core.PositionMapping
@@ -123,6 +125,7 @@ library
         Development.IDE.GHC.Warnings
         Development.IDE.Import.FindImports
         Development.IDE.LSP.CodeAction
+        Development.IDE.LSP.Completions
         Development.IDE.LSP.Definition
         Development.IDE.LSP.Hover
         Development.IDE.LSP.Notifications
