--- a/stack84.yaml
+++ b/stack84.yaml
@@ -11,6 +11,7 @@ extra-deps:
 - filepattern-0.1.1
 - js-dgtable-0.5.2
 - hie-bios-0.2.1
+- fuzzy-0.1.0.0
 nix:
   packages: [zlib]
 allow-newer: true
