Work a bit more on completion

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -98,6 +98,7 @@ library
         include
     exposed-modules:
         Development.IDE.Core.Completions
+        Development.IDE.Core.CompletionsTypes
         Development.IDE.Core.FileStore
         Development.IDE.Core.OfInterest
         Development.IDE.Core.PositionMapping
