--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -41,8 +41,8 @@ library
         extra,
         filepath,
         hashable,
-        haskell-lsp-types >= 0.18,
-        haskell-lsp >= 0.18,
+        haskell-lsp-types == 0.19.*,
+        haskell-lsp == 0.19.*,
         mtl,
         network-uri,
         prettyprinter-ansi-terminal,
