--- a/stack88.yaml
+++ b/stack88.yaml
@@ -2,6 +2,9 @@ resolver: nightly-2019-12-06
 packages:
 - .
 extra-deps:
+- haskell-lsp-0.19.0.0
+- haskell-lsp-types-0.19.0.0
+- lsp-test-0.9.0.0
 - hie-bios-0.3.0
 allow-newer: true
 nix:
