Refactor hover and go-to-definition searching
The process of searching for definitions is similar to the process of searching
for hover information. In the original code (much of which was written out twice
with occasional stylistic differences) the signal to noise ratio seemed pretty
poor.

Here is a refactoring which aims to make it easier to see the similarities and
differences between these two related functionalities.

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -123,8 +123,7 @@ library
         Development.IDE.GHC.Warnings
         Development.IDE.Import.FindImports
         Development.IDE.LSP.CodeAction
-        Development.IDE.LSP.Definition
-        Development.IDE.LSP.Hover
+        Development.IDE.LSP.HoverDefinition
         Development.IDE.LSP.Notifications
         Development.IDE.Spans.AtPoint
         Development.IDE.Spans.Calculate
