--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -131,6 +131,14 @@ library
         Development.IDE.Spans.Type
     ghc-options: -Wall -Wno-name-shadowing
 
+executable ghcide-test-preprocessor
+    default-language: Haskell2010
+    hs-source-dirs: test/preprocessor
+    ghc-options: -Wall
+    main-is: Main.hs
+    build-depends:
+        base == 4.*
+
 executable ghcide
     if flag(ghc-lib)
       buildable: False
