Add a preprocessor test

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -177,7 +177,8 @@ test-suite ghcide-tests
     type: exitcode-stdio-1.0
     default-language: Haskell2010
     build-tool-depends:
-        ghcide:ghcide
+        ghcide:ghcide,
+        ghcide:ghcide-test-preprocessor
     build-depends:
         base,
         bytestring,
