--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -46,6 +46,7 @@ library
         haskell-lsp == 0.19.*,
         mtl,
         network-uri,
+        pandoc,
         prettyprinter-ansi-terminal,
         prettyprinter-ansi-terminal,
         prettyprinter,
