Make it work on 8.8 and 8.4

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -83,6 +83,7 @@
     - Development.IDE.Import.FindImports
     - Development.IDE.LSP.CodeAction
     - Development.IDE.Spans.Calculate
+    - Development.IDE.Spans.Documentation
     - Main
 
 - flags:
