--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -49,6 +49,7 @@ library
         prettyprinter-ansi-terminal,
         prettyprinter-ansi-terminal,
         prettyprinter,
+        regex-tdfa >= 1.3.1.0,
         rope-utf16-splay,
         safe-exceptions,
         shake >= 0.17.5,
