--- a/stack-ghc-lib.yaml
+++ b/stack-ghc-lib.yaml
@@ -9,6 +9,8 @@ extra-deps:
 - ghc-lib-parser-8.8.1
 - ghc-lib-8.8.1
 - fuzzy-0.1.0.0
+- regex-base-0.94.0.0
+- regex-tdfa-1.3.1.0
 nix:
   packages: [zlib]
 flags:
