--- a/stack84.yaml
+++ b/stack84.yaml
@@ -14,6 +14,7 @@ extra-deps:
 - fuzzy-0.1.0.0
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
+- parser-combinators-1.2.1
 nix:
   packages: [zlib]
 allow-newer: true
