--- a/stack.yaml
+++ b/stack.yaml
@@ -7,6 +7,7 @@ extra-deps:
 - lsp-test-0.10.0.0
 - hie-bios-0.3.2
 - fuzzy-0.1.0.0
+- regex-pcre-builtin-0.95.1.1.8.43
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
 - parser-combinators-1.2.1
