Replace Pandoc with direct conversion from Haddock to Markdown

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -41,12 +41,12 @@ library
         extra,
         fuzzy,
         filepath,
+        haddock-library,
         hashable,
         haskell-lsp-types == 0.19.*,
         haskell-lsp == 0.19.*,
         mtl,
         network-uri,
-        pandoc,
         prettyprinter-ansi-terminal,
         prettyprinter-ansi-terminal,
         prettyprinter,
