Extend version message to include path and git commit

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -162,6 +162,7 @@ executable ghcide
         filepath,
         ghc-paths,
         ghc,
+        gitrev,
         haskell-lsp,
         hie-bios >= 0.3.2 && < 0.4,
         ghcide,
