--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -76,7 +76,6 @@
   - {name: ImplicitParams, within: []}
   - name: CPP
     within:
-    - Development.IDE.Core.Completions
     - Development.IDE.Core.FileStore
     - Development.IDE.Core.Compile
     - Development.IDE.GHC.Compat
@@ -86,6 +85,7 @@
     - Development.IDE.Spans.Calculate
     - Development.IDE.Spans.Documentation
     - Development.IDE.Spans.Common
+    - Development.IDE.Plugin.Completions.Logic
     - Main
 
 - flags:
