--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -143,7 +143,7 @@ library
 executable ghcide-test-preprocessor
     default-language: Haskell2010
     hs-source-dirs: test/preprocessor
-    ghc-options: -Wall
+    ghc-options: -Wall -Wno-name-shadowing
     main-is: Main.hs
     build-depends:
         base == 4.*
