--- a/stack.yaml
+++ b/stack.yaml
@@ -5,11 +5,12 @@ extra-deps:
 - haskell-lsp-0.19.0.0
 - haskell-lsp-types-0.19.0.0
 - lsp-test-0.10.0.0
-- hie-bios-0.3.2
 - fuzzy-0.1.0.0
 - regex-pcre-builtin-0.95.1.1.8.43
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
 - parser-combinators-1.2.1
+- git: https://github.com/mpickering/hie-bios.git
+  commit: d9f602326526ded2bba4ae07d4125b10c6f66ffa
 nix:
   packages: [zlib]
