--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -171,7 +171,10 @@ executable ghcide
         hslogger,
         base == 4.*,
         binary,
+        base16-bytestring >=0.1.1 && <0.2,
+        bytestring,
         containers,
+        cryptohash-sha1 >=0.11.100 && <0.12,
         data-default,
         deepseq,
         directory,
