--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -41,7 +41,7 @@ library
         extra,
         fuzzy,
         filepath,
-        haddock-library,
+        haddock-library >= 1.8,
         hashable,
         haskell-lsp-types == 0.19.*,
         haskell-lsp == 0.19.*,
