--- a/stack-ghc-lib.yaml
+++ b/stack-ghc-lib.yaml
@@ -11,6 +11,7 @@ extra-deps:
 - fuzzy-0.1.0.0
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
+- haddock-library-1.8.0
 nix:
   packages: [zlib]
 flags:
