--- a/stack.yaml
+++ b/stack.yaml
@@ -11,5 +11,6 @@ extra-deps:
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
 - parser-combinators-1.2.1
+- haddock-library-1.8.0
 nix:
   packages: [zlib]
