--- a/stack84.yaml
+++ b/stack84.yaml
@@ -3,15 +3,18 @@ packages:
 - .
 
 extra-deps:
+- aeson-1.4.6.0
+- base-orphans-0.8.2
 - haskell-lsp-0.19.0.0
 - haskell-lsp-types-0.19.0.0
 - lsp-test-0.10.0.0
 - rope-utf16-splay-0.3.1.0
 - filepattern-0.1.1
 - js-dgtable-0.5.2
-- hie-bios-0.3.2
+- hie-bios-0.4.0
 - fuzzy-0.1.0.0
 - shake-0.18.4
+- time-compat-1.9.2.2
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
 - parser-combinators-1.2.1
