--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -60,7 +60,7 @@ library
         text,
         time,
         transformers,
-        unordered-containers,
+        unordered-containers >= 0.2.10.0,
         utf8-string,
         hslogger
     if flag(ghc-lib)
@@ -144,7 +144,7 @@ library
 executable ghcide-test-preprocessor
     default-language: Haskell2010
     hs-source-dirs: test/preprocessor
-    ghc-options: -Wall
+    ghc-options: -Wall -Wno-name-shadowing
     main-is: Main.hs
     build-depends:
         base == 4.*
@@ -181,7 +181,8 @@ executable ghcide
         ghcide,
         optparse-applicative,
         shake,
-        text
+        text,
+        unordered-containers
     other-modules:
         Arguments
         Paths_ghcide
