--- a/stack84.yaml
+++ b/stack84.yaml
@@ -19,6 +19,7 @@ extra-deps:
 - regex-tdfa-1.3.1.0
 - parser-combinators-1.2.1
 - haddock-library-1.8.0
+- unordered-containers-0.2.10.0
 nix:
   packages: [zlib]
 allow-newer: true
