Fix regression in cradle loading logic
We were calling runCradle multiple times per cradle, concurrently. For Cabal
cradles this function runs Cabal, which is neither fast nor designed to be run
concurrently

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -194,6 +194,7 @@ executable ghcide
     other-modules:
         Arguments
         Paths_ghcide
+        RuleTypes
 
     default-extensions:
         DeriveGeneric
