Suggest missing imports via package exports map
At the expense of some space and initialization time, suggest imports now is
able to find suggestions in all the packages available to the project.

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -139,6 +139,8 @@ library
         Development.IDE.Spans.Documentation
         Development.IDE.Spans.Type
         Development.IDE.Plugin.CodeAction.PositionIndexed
+        Development.IDE.Plugin.CodeAction.Rules
+        Development.IDE.Plugin.CodeAction.RuleTypes
         Development.IDE.Plugin.Completions.Logic
         Development.IDE.Plugin.Completions.Types
     ghc-options: -Wall -Wno-name-shadowing
