Detect ghc version mismatches

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -183,6 +183,7 @@ executable ghcide
         directory,
         extra,
         filepath,
+        ghc-check,
         ghc-paths,
         ghc,
         gitrev,
