--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -197,3 +197,53 @@ jobs:
                --data "{\"text\":\"<!here> *FAILED* $(Agent.JobName): <https://dev.azure.com/digitalasset/ghcide/_build/results?buildId=$(Build.BuildId)|$MESSAGE>\n\"}" \
                $(Slack.URL)
         condition: and(failed(), eq(variables['Build.SourceBranchName'], 'master'))
+  - job: ghcide_stack_86_windows
+    timeoutInMinutes: 60
+    pool:
+      vmImage: 'windows-2019'
+    variables:
+      STACK_ROOT: "C:\\sr"
+    steps:
+      - checkout: self
+      - task: CacheBeta@0
+        inputs:
+          key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/stack.yaml | $(Build.SourcesDirectory)/ghcide.cabal
+          path: .azure-cache
+          cacheHitVar: CACHE_RESTORED
+        displayName: "Cache stack artifacts"
+      - bash: |
+          mkdir -p $STACK_ROOT
+          tar -vxzf .azure-cache/stack-root.tar.gz -C /c
+          mkdir -p .stack-work
+          tar -vxzf .azure-cache/stack-work.tar.gz
+        displayName: "Unpack cache"
+        condition: eq(variables.CACHE_RESTORED, 'true')
+      - bash: |
+          ./fmt.sh
+        displayName: "HLint via ./fmt.sh"
+      - bash: |
+          curl -sSkL http://www.stackage.org/stack/windows-x86_64 -o /usr/bin/stack.zip
+          unzip -o /usr/bin/stack.zip -d /usr/bin/
+          mkdir -p "$STACK_ROOT"
+        displayName: 'Install Stack'
+      - bash: stack setup
+        displayName: 'stack setup'
+      - bash: stack build --only-dependencies
+        displayName: 'stack build --only-dependencies'
+      - bash: stack test --ghc-options=-Werror || stack test --ghc-options=-Werror || stack test --ghc-options=-Werror
+        # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
+        displayName: 'stack test --ghc-options=-Werror'
+      - bash: |
+          mkdir -p .azure-cache
+          tar -vczf .azure-cache/stack-root.tar.gz $(cygpath $STACK_ROOT)
+          tar -vczf .azure-cache/stack-work.tar.gz .stack-work
+        displayName: "Pack cache"
+      - bash: |
+          set -euo pipefail
+          MESSAGE=$(git log --pretty=format:%s -n1)
+          curl -XPOST \
+               -i \
+               -H 'Content-type: application/json' \
+               --data "{\"text\":\"<!here> *FAILED* $(Agent.JobName): <https://dev.azure.com/digitalasset/ghcide/_build/results?buildId=$(Build.BuildId)|$MESSAGE>\n\"}" \
+               $(Slack.URL)
+        condition: and(failed(), eq(variables['Build.SourceBranchName'], 'master'))
