--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -198,17 +198,30 @@ jobs:
                --data "{\"text\":\"<!here> *FAILED* $(Agent.JobName): <https://dev.azure.com/digitalasset/ghcide/_build/results?buildId=$(Build.BuildId)|$MESSAGE>\n\"}" \
                $(Slack.URL)
         condition: and(failed(), eq(variables['Build.SourceBranchName'], 'master'))
-  - job: ghcide_stack_86_windows
+  - job: ghcide_stack_windows
     timeoutInMinutes: 60
     pool:
       vmImage: 'windows-2019'
+    strategy:
+      matrix:
+        # ghc versions 8.8.1 and 8.8.2 are not usable in windows
+        # due to https://gitlab.haskell.org/ghc/ghc/issues/17575
+        # TODO: Enable when stack88.yaml uses ghc-8.8.3
+        # stack-8.8:
+        #   STACK_YAML: "stack88.yaml"
+        stack-def:
+          STACK_YAML: "stack.yaml"
+        stack-8.4:
+          STACK_YAML: "stack84.yaml"
+        stack-ghc-lib:
+          STACK_YAML: "stack-ghc-lib.yaml"
     variables:
       STACK_ROOT: "C:\\sr"
     steps:
       - checkout: self
       - task: CacheBeta@0
         inputs:
-          key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/stack.yaml | $(Build.SourcesDirectory)/ghcide.cabal
+          key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
           path: .azure-cache
           cacheHitVar: CACHE_RESTORED
         displayName: "Cache stack artifacts"
@@ -227,11 +240,11 @@ jobs:
           unzip -o /usr/bin/stack.zip -d /usr/bin/
           mkdir -p "$STACK_ROOT"
         displayName: 'Install Stack'
-      - bash: stack setup
+      - bash: stack setup --stack-yaml $STACK_YAML
         displayName: 'stack setup'
-      - bash: stack build --only-dependencies
+      - bash: stack build --only-dependencies --stack-yaml $STACK_YAML
         displayName: 'stack build --only-dependencies'
-      - bash: stack test --ghc-options=-Werror || stack test --ghc-options=-Werror || stack test --ghc-options=-Werror
+      - bash: stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML
         # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
         displayName: 'stack test --ghc-options=-Werror'
       - bash: |
