--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -219,7 +219,7 @@ jobs:
       STACK_ROOT: "C:\\sr"
     steps:
       - checkout: self
-      - task: CacheBeta@0
+      - task: Cache@2
         inputs:
           key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
           path: .azure-cache
