--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -247,6 +247,8 @@ jobs:
       - bash: stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML
         # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
         displayName: 'stack test --ghc-options=-Werror'
+        # TODO: Enable when failing tests are fixed or marked as broken. See https://github.com/digital-asset/ghcide/issues/474
+        condition: False
       - bash: |
           mkdir -p .azure-cache
           tar -vczf .azure-cache/stack-root.tar.gz $(cygpath $STACK_ROOT)
