--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -242,7 +242,9 @@ jobs:
         displayName: 'Install Stack'
       - bash: stack setup --stack-yaml $STACK_YAML
         displayName: 'stack setup'
-      - bash: stack build --only-dependencies --stack-yaml $STACK_YAML
+      - bash: |
+          stack install happy --stack-yaml $STACK_YAML
+          stack build --only-dependencies --stack-yaml $STACK_YAML
         displayName: 'stack build --only-dependencies'
       - bash: stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML
         # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
