Enable build using ghc-8.8.2 for windows

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -204,11 +204,8 @@ jobs:
       vmImage: 'windows-2019'
     strategy:
       matrix:
-        # ghc versions 8.8.1 and 8.8.2 are not usable in windows
-        # due to https://gitlab.haskell.org/ghc/ghc/issues/17575
-        # TODO: Enable when stack88.yaml uses ghc-8.8.3
-        # stack_88:
-        #   STACK_YAML: "stack88.yaml"
+        stack_88:
+          STACK_YAML: "stack88.yaml"
         stack_86:
           STACK_YAML: "stack.yaml"
         stack_84:
