Treat alex the same way as happy to avoid CI issues

--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -41,8 +41,9 @@ jobs:
   - bash: stack setup --stack-yaml $STACK_YAML
     displayName: 'stack setup'
   - bash: |
-      # Installing happy standalone to avoid error "strip.exe: unable to rename ../happy.exe; reason: File exists"
+      # Installing happy and alex standalone to avoid error "strip.exe: unable to rename ../*.exe; reason: File exists"
       stack install happy --stack-yaml $STACK_YAML
+      stack install alex --stack-yaml $STACK_YAML
       stack build --only-dependencies --stack-yaml $STACK_YAML
     displayName: 'stack build --only-dependencies'
   - bash: stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML
