Correct stack.yaml used in azure ci cache

--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -17,7 +17,7 @@ jobs:
   - checkout: self
   - task: Cache@2
     inputs:
-      key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/stack.yaml | $(Build.SourcesDirectory)/ghcide.cabal
+      key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
       path: .azure-cache
       cacheHitVar: CACHE_RESTORED
     displayName: "Cache stack artifacts"
