Build ghcide including tests in windows azure ci

--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -46,11 +46,9 @@ jobs:
       stack install alex --stack-yaml $STACK_YAML
       stack build --only-dependencies --stack-yaml $STACK_YAML
     displayName: 'stack build --only-dependencies'
-  - bash: stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --ghc-options=-Werror --stack-yaml $STACK_YAML
-    # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
+  - bash: stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
     displayName: 'stack test --ghc-options=-Werror'
-    # TODO: Enable when failing tests are fixed or marked as broken. See https://github.com/digital-asset/ghcide/issues/474
-    condition: False
+    # TODO: run test suite when failing tests are fixed or marked as broken. See https://github.com/digital-asset/ghcide/issues/474
   - bash: |
       mkdir -p .azure-cache
       tar -vczf .azure-cache/stack-root.tar.gz $(cygpath $STACK_ROOT)
