--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -76,6 +76,7 @@
   - {name: ImplicitParams, within: []}
   - name: CPP
     within:
+    - Development.IDE.Compat
     - Development.IDE.Core.FileStore
     - Development.IDE.Core.Compile
     - Development.IDE.GHC.Compat
