ShakeSession and shakeRunGently
Currently we start a new Shake session for every interaction with the Shake
database, including type checking, hovers, code actions, completions, etc.
Since only one Shake session can ever exist, we abort the active session if any
in order to execute the new command in a responsive manner.

This is suboptimal in many, many ways:

- A hover in module M aborts the typechecking of module M, only to start over!
- Read-only commands (hover, code action, completion) need to typecheck all the
  modules! (or rather, ask Shake to check that the typechecks are current)
- There is no way to run non-interfering commands concurrently

This is an experiment inspired by the 'ShakeQueue' of @mpickering, and
the follow-up discussion in https://github.com/mpickering/ghcide/issues/7

We introduce the concept of the 'ShakeSession' as part of the IDE state.
The 'ShakeSession' is initialized by a call to 'shakeRun', and survives until
the next call to 'shakeRun'. It is important that the session is restarted as
soon as the filesystem changes, to ensure that the database is current.

The 'ShakeSession' enables a new command 'shakeRunGently', which appends work to
the existing 'ShakeSession'. This command can be called in parallel without any
restriction.

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -46,6 +46,7 @@ library
         hashable,
         haskell-lsp-types == 0.21.*,
         haskell-lsp == 0.21.*,
+        monad-loops,
         mtl,
         network-uri,
         prettyprinter-ansi-terminal,
@@ -57,6 +58,7 @@ library
         shake >= 0.18.4,
         sorted-list,
         stm,
+        stm-chans,
         syb,
         text,
         time,
