Fix upper bounds for ghc-check

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -197,7 +197,7 @@ executable ghcide
         directory,
         extra,
         filepath,
-        ghc-check >= 0.3.0.1,
+        ghc-check >= 0.3.0.1 && < 0.4,
         ghc-paths,
         ghc,
         gitrev,
