--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -46,6 +46,7 @@ jobs:
       # Installing happy and alex standalone to avoid error "strip.exe: unable to rename ../*.exe; reason: File exists"
       stack install happy --stack-yaml $STACK_YAML
       stack install alex --stack-yaml $STACK_YAML
+      stack install cabal-install --stack-yaml $STACK_YAML
       stack build --only-dependencies --stack-yaml $STACK_YAML
     displayName: 'stack build --only-dependencies'
   - bash: stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
