--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -35,6 +35,7 @@ jobs:
       sudo add-apt-repository ppa:hvr/ghc
       sudo apt-get update
       sudo apt-get install -y g++ gcc libc6-dev libffi-dev libgmp-dev make zlib1g-dev cabal-install-3.2
+      export PATH=/opt/cabal/bin:$PATH
       if ! which stack >/dev/null 2>&1; then
          curl -sSL https://get.haskellstack.org/ | sh
       fi
