Add opentelemetry tracing
Adds tracing to shake actions (everything defined with
defineEarlyCutoff) and requests defined in HoverDefinition.hs.

It also adds opentelemetry to the dependencies

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -70,7 +70,8 @@ library
         transformers,
         unordered-containers >= 0.2.10.0,
         utf8-string,
-        hslogger
+        hslogger,
+        opentelemetry ==0.4.*
     if flag(ghc-lib)
       build-depends:
         ghc-lib >= 8.8,
