Fix Binary instance of Q to handle empty file paths

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -296,6 +296,7 @@ test-suite ghcide-tests
     build-depends:
         aeson,
         base,
+        binary,
         bytestring,
         containers,
         directory,
