Add ghcide contributors to copyright
Co-authored-by: Neil Mitchell <ndmitchell@gmail.com>

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -5,9 +5,9 @@ name:               ghcide
 version:            0.3.0
 license:            Apache-2.0
 license-file:       LICENSE
-author:             Digital Asset + Ghcide contributors
+author:             Digital Asset and Ghcide contributors
 maintainer:         Ghcide contributors
-copyright:          Digital Asset 2018-2020
+copyright:          Digital Asset and Ghcide contributors 2018-2020
 synopsis:           The core of an IDE
 description:
     A library for building Haskell IDE's on top of the GHC API.
