--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,8 @@ extra-deps:
 - tasty-rerun-1.1.17
 - ghc-check-0.5.0.1
 - extra-1.7.2
+- implicit-hie-0.1.1.0
+- implicit-hie-cradle-0.1.0.0
 nix:
   packages: [zlib]
 
