--- a/stack84.yaml
+++ b/stack84.yaml
@@ -24,6 +24,8 @@ extra-deps:
 - heaps-0.3.6.1
 - ghc-check-0.5.0.1
 - extra-1.7.2
+- implicit-hie-0.1.1.0
+- implicit-hie-cradle-0.1.0.0
 # For tasty-retun
 - ansi-terminal-0.10.3
 - ansi-wl-pprint-0.6.9
