--- a/stack88.yaml
+++ b/stack88.yaml
@@ -8,6 +8,8 @@ extra-deps:
 - ghc-check-0.5.0.1
 - hie-bios-0.7.1
 - extra-1.7.2
+- implicit-hie-0.1.1.0
+- implicit-hie-cradle-0.1.0.0
 nix:
   packages: [zlib]
 
