Fix stack 8.6 build

--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@ resolver: nightly-2019-09-21
 packages:
 - .
 extra-deps:
+- aeson-1.4.6.0
 - haskell-lsp-0.22.0.0
 - haskell-lsp-types-0.22.0.0
 - lsp-test-0.11.0.5
