--- a/stack84.yaml
+++ b/stack84.yaml
@@ -13,8 +13,7 @@ extra-deps:
 - js-dgtable-0.5.2
 - hie-bios-0.7.1
 - implicit-hie-0.1.1.0
-- github: Avi-D-coder/implicit-hie-cradle
-  commit: f7bfc24ed036e31c0a758b9ab6665c4999eb4fe0
+- implicit-hie-cradle-0.2.0.0
 - fuzzy-0.1.0.0
 - shake-0.18.5
 - time-compat-1.9.2.2
