--- a/stack88.yaml
+++ b/stack88.yaml
@@ -9,8 +9,7 @@ extra-deps:
 - hie-bios-0.7.1
 - extra-1.7.2
 - implicit-hie-0.1.1.0
-- github: Avi-D-coder/implicit-hie-cradle
-  commit: f7bfc24ed036e31c0a758b9ab6665c4999eb4fe0
+- implicit-hie-cradle-0.2.0.0
 
 nix:
   packages: [zlib]
