Include test dependencies in cache

--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -41,8 +41,8 @@ jobs:
     displayName: 'Install Stack'
   - bash: stack setup --stack-yaml=$STACK_YAML
     displayName: 'stack setup'
-  - bash: stack build --only-dependencies --stack-yaml=$STACK_YAML
-    displayName: 'stack build --only-dependencies'
+  - bash: stack build --test --only-dependencies --stack-yaml=$STACK_YAML
+    displayName: 'stack build --test --only-dependencies'
   - bash: |
       mkdir -p .azure-cache
       tar czf .azure-cache/stack-root.tar.gz -C $HOME .stack
