Correct cache task name

--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -30,7 +30,7 @@ jobs:
       key: stack-work-cache | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
       path: .stack-work
       cacheHitVar: STACK_WORK_CACHE_RESTORED
-    displayName: "Cache stack root"
+    displayName: "Cache stack work"
   - bash: |
       ./fmt.sh
     displayName: "HLint via ./fmt.sh"
